# whereami

./: .gitignore  LICENSE  README.md  locations.json  main.py  pyproject.toml
whereami/: __init__.py  __main__.py  command_line.py
whereamicloud/: __init__.py  command_line.py
