[project]
name = "whereamicloud"
version = "1.2.0"
description = "Pings various known datacenter locations to triangulate itself"
authors = [
    {name = "Dank", email = "4129589+danktec@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tcppinglib (>=2.0.4,<3.0.0)",
    "ping3 (>=5.1.5,<6.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
whereamicloud = "whereamicloud.command_line:main"
